# vtc-link

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_ko.md  TODO.md  build.sh  dev.sh  docker-compose.yml  hospitals.yaml  mkdocs.yml  pyproject.toml  run.sh  stop.sh
.github/workflows/: docs.yml
app/: main.py
app/api/: admin.py  health.py  push.py  routes.py
app/clients/: backend_api.py
app/connectors/: db_push_insert_insert.py  mssql_view_fetch.py  oracle_view_fetch.py  rest_pull_fetch.py  rest_push_receive.py
app/core/: auth.py  config.py  db.py  errors.py  logger.py  logging.py  pipeline.py  postprocess.py  scheduler.py  telemetry.py
app/models/: canonical.py  client.py
app/utils/: parsing.py
docs/: admin-ui.md  architecture.md  connectors.md  data-model.md  deployment.md  error-codes.md  index.md  logging-monitoring.md  pipeline.md  postprocess.md  requirements.txt  testing.md
docs/en/: admin-ui.md  api-reference.md  architecture.md  configuration.md  connectors.md  contributing.md  data-model.md  deployment.md  error-codes.md  index.md  logging-monitoring.md  overview.md  pipeline.md  postprocess.md  testing.md
docs/ko/: admin-ui.md  api-reference.md  architecture.md  configuration.md  connectors.md  contributing.md  data-model.md  deployment.md  error-codes.md  index.md  logging-monitoring.md  overview.md  pipeline.md  postprocess.md  testing.md
static/: styles.css
templates/: base.html
tests/: test_admin_config.py  test_parsing.py  test_pipeline_logging.py  test_postprocess.py  test_scheduler.py
(+7 files in other folders)
